@@ -1,0 +1,54 @@
+# BEGIN PLOT /CMS_2013_I1208923/d01
+LogY=1
+LogX=0
+FullRange=1
+XLabel=Jet $p_{T}$ [GeV]
+YLabel=d$^2\sigma$/d$p_{T}$d$y$ [pb/GeV]
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1208923/d01-x01-y01
+Title=Single Jet Analysis, $0.0 < |y| < 0.5$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1208923/d01-x01-y02
+Title=Single Jet Analysis, $0.5 < |y| < 1.0$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1208923/d01-x01-y03
+Title=Single Jet Analysis, $1.0 < |y| < 1.5$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1208923/d01-x01-y04
+Title=Single Jet Analysis, $1.5 < |y| < 2.0$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1208923/d01-x01-y05
+Title=Single Jet Analysis, $2.0 < |y| < 2.5$, $\sqrt{s} = 7$ TeV
+# END PLOT
+# BEGIN PLOT /CMS_2013_I1208923/d02
+LogY=1
+LogX=0
+FullRange=1
+XLabel=$M_{jj}$ [GeV]
+YLabel=d$^2\sigma$/d$M$d$y$ [pb/GeV]
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1208923/d02-x01-y01
+Title=Dijet Analysis, $0.0 < |y| < 0.5$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1208923/d02-x01-y02
+Title=Dijet Analysis, $0.5 < |y| < 1.0$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1208923/d02-x01-y03
+Title=Dijet Analysis, $1.0 < |y| < 1.5$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1208923/d02-x01-y04
+Title=Dijet Analysis, $1.5 < |y| < 2.0$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1208923/d02-x01-y05
+Title=Dijet Analysis, $2.0 < |y| < 2.5$, $\sqrt{s} = 7$ TeV
+# END PLOT
