@@ -1,0 +1,257 @@
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1208923/d01-x01-y04
+Path=/REF/CMS_2013_I1208923/d01-x01-y04
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+1.235000e+02	9.500000e+00	9.500000e+00	1.813000e+03	1.764001e+02	1.714701e+02
+1.430000e+02	1.000000e+01	1.000000e+01	7.927000e+02	7.402770e+01	7.305135e+01
+1.635000e+02	1.050000e+01	1.050000e+01	3.550000e+02	3.245304e+01	3.225957e+01
+1.850000e+02	1.100000e+01	1.100000e+01	1.675000e+02	1.486371e+01	1.476482e+01
+2.080000e+02	1.200000e+01	1.200000e+01	8.278000e+01	7.404566e+00	7.384849e+00
+2.325000e+02	1.250000e+01	1.250000e+01	4.037000e+01	3.645888e+00	3.626252e+00
+2.585000e+02	1.350000e+01	1.350000e+01	2.118000e+01	1.945867e+00	1.955633e+00
+2.860000e+02	1.400000e+01	1.400000e+01	1.057000e+01	1.006876e+00	1.006876e+00
+3.150000e+02	1.500000e+01	1.500000e+01	5.547000e+00	5.282660e-01	5.302499e-01
+3.460000e+02	1.600000e+01	1.600000e+01	2.806000e+00	2.757716e-01	2.767616e-01
+3.785000e+02	1.650000e+01	1.650000e+01	1.427000e+00	1.438923e-01	1.448862e-01
+4.125000e+02	1.750000e+01	1.750000e+01	7.427000e-01	7.830313e-02	7.969253e-02
+4.490000e+02	1.900000e+01	1.900000e+01	3.663000e-01	4.037635e-02	4.097084e-02
+4.875000e+02	1.950000e+01	1.950000e+01	1.841000e-01	2.142195e-02	2.181605e-02
+5.275000e+02	2.050000e+01	2.050000e+01	8.613000e-02	1.035941e-02	1.061869e-02
+5.700000e+02	2.200000e+01	2.200000e+01	3.938000e-02	4.976203e-03	5.115486e-03
+6.150000e+02	2.300000e+01	2.300000e+01	1.800000e-02	2.400104e-03	2.479456e-03
+6.620000e+02	2.400000e+01	2.400000e+01	8.217000e-03	1.169113e-03	1.202601e-03
+7.115000e+02	2.550000e+01	2.550000e+01	3.605000e-03	5.493432e-04	5.677966e-04
+7.635000e+02	2.650000e+01	2.650000e+01	1.452000e-03	2.407592e-04	2.501699e-04
+8.180000e+02	2.800000e+01	2.800000e+01	5.105000e-04	9.693555e-05	1.002653e-04
+8.755000e+02	2.950000e+01	2.950000e+01	1.820000e-04	4.246469e-05	4.360963e-05
+9.360000e+02	3.100000e+01	3.100000e+01	7.258000e-05	2.170669e-05	2.215876e-05
+1.107500e+03	1.405000e+02	1.405000e+02	1.045000e-05	3.882074e-06	3.966976e-06
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1208923/d01-x01-y05
+Path=/REF/CMS_2013_I1208923/d01-x01-y05
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+1.235000e+02	9.500000e+00	9.500000e+00	1.221000e+03	1.677260e+02	1.746568e+02
+1.430000e+02	1.000000e+01	1.000000e+01	5.078000e+02	6.947071e+01	7.350544e+01
+1.635000e+02	1.050000e+01	1.050000e+01	2.236000e+02	3.103192e+01	3.318343e+01
+1.850000e+02	1.100000e+01	1.100000e+01	1.007000e+02	1.401606e+01	1.500833e+01
+2.080000e+02	1.200000e+01	1.200000e+01	4.405000e+01	6.308922e+00	6.833579e+00
+2.325000e+02	1.250000e+01	1.250000e+01	2.052000e+01	3.039753e+00	3.306509e+00
+2.585000e+02	1.350000e+01	1.350000e+01	9.395000e+00	1.446572e+00	1.582977e+00
+2.860000e+02	1.400000e+01	1.400000e+01	4.053000e+00	6.602606e-01	7.222908e-01
+3.150000e+02	1.500000e+01	1.500000e+01	1.792000e+00	2.955842e-01	3.273316e-01
+3.460000e+02	1.600000e+01	1.600000e+01	7.782000e-01	1.346241e-01	1.497685e-01
+3.785000e+02	1.650000e+01	1.650000e+01	3.184000e-01	5.765770e-02	6.410117e-02
+4.125000e+02	1.750000e+01	1.750000e+01	1.221000e-01	2.332831e-02	2.599423e-02
+4.490000e+02	1.900000e+01	1.900000e+01	4.641000e-02	9.405110e-03	1.051201e-02
+4.875000e+02	1.950000e+01	1.950000e+01	1.616000e-02	3.529788e-03	3.942398e-03
+5.275000e+02	2.050000e+01	2.050000e+01	5.314000e-03	1.186475e-03	1.332757e-03
+5.700000e+02	2.200000e+01	2.200000e+01	1.634000e-03	3.956425e-04	4.421640e-04
+6.150000e+02	2.300000e+01	2.300000e+01	3.233000e-04	9.080666e-05	1.001212e-04
+6.620000e+02	2.400000e+01	2.400000e+01	9.167000e-05	3.344388e-05	3.574189e-05
+7.955000e+02	1.095000e+02	1.095000e+02	7.920000e-06	4.238977e-06	4.439372e-06
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1208923/d01-x01-y02
+Path=/REF/CMS_2013_I1208923/d01-x01-y02
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+1.235000e+02	9.500000e+00	9.500000e+00	2.810000e+03	2.087870e+02	2.048414e+02
+1.430000e+02	1.000000e+01	1.000000e+01	1.234000e+03	8.807383e+01	8.709765e+01
+1.635000e+02	1.050000e+01	1.050000e+01	5.766000e+02	3.875939e+01	3.837252e+01
+1.850000e+02	1.100000e+01	1.100000e+01	2.860000e+02	1.848378e+01	1.769209e+01
+2.080000e+02	1.200000e+01	1.200000e+01	1.460000e+02	8.944272e+00	9.141116e+00
+2.325000e+02	1.250000e+01	1.250000e+01	7.607000e+01	4.610694e+00	4.600891e+00
+2.585000e+02	1.350000e+01	1.350000e+01	4.055000e+01	2.466759e+00	2.427859e+00
+2.860000e+02	1.400000e+01	1.400000e+01	2.222000e+01	1.358565e+00	1.339291e+00
+3.150000e+02	1.500000e+01	1.500000e+01	1.242000e+01	7.269113e-01	7.368175e-01
+3.460000e+02	1.600000e+01	1.600000e+01	6.966000e+00	4.197547e-01	4.118471e-01
+3.785000e+02	1.650000e+01	1.650000e+01	3.942000e+00	2.362224e-01	2.362224e-01
+4.125000e+02	1.750000e+01	1.750000e+01	2.269000e+00	1.379311e-01	1.399178e-01
+4.490000e+02	1.900000e+01	1.900000e+01	1.303000e+00	8.161495e-02	8.161495e-02
+4.875000e+02	1.950000e+01	1.950000e+01	7.474000e-01	4.777217e-02	4.816825e-02
+5.275000e+02	2.050000e+01	2.050000e+01	4.242000e-01	2.765231e-02	2.775212e-02
+5.700000e+02	2.200000e+01	2.200000e+01	2.449000e-01	1.634411e-02	1.664332e-02
+6.150000e+02	2.300000e+01	2.300000e+01	1.428000e-01	9.940825e-03	1.004042e-02
+6.620000e+02	2.400000e+01	2.400000e+01	8.285000e-02	5.938392e-03	6.077738e-03
+7.115000e+02	2.550000e+01	2.550000e+01	4.771000e-02	3.562485e-03	3.641772e-03
+7.635000e+02	2.650000e+01	2.650000e+01	2.762000e-02	2.155412e-03	2.214723e-03
+8.180000e+02	2.800000e+01	2.800000e+01	1.550000e-02	1.274755e-03	1.294372e-03
+8.755000e+02	2.950000e+01	2.950000e+01	8.333000e-03	7.196034e-04	7.390189e-04
+9.360000e+02	3.100000e+01	3.100000e+01	4.376000e-03	4.051234e-04	4.137076e-04
+9.995000e+02	3.250000e+01	3.250000e+01	2.396000e-03	2.373205e-04	2.438237e-04
+1.066500e+03	3.450000e+01	3.450000e+01	1.426000e-03	1.543049e-04	1.570127e-04
+1.136500e+03	3.550000e+01	3.550000e+01	7.655000e-04	9.109627e-05	9.314145e-05
+1.210000e+03	3.800000e+01	3.800000e+01	3.218000e-04	4.577554e-05	4.668404e-05
+1.287500e+03	3.950000e+01	3.950000e+01	1.292000e-04	2.325446e-05	2.350766e-05
+1.368500e+03	4.150000e+01	4.150000e+01	7.129000e-05	1.704254e-05	1.717911e-05
+1.597000e+03	1.870000e+02	1.870000e+02	1.531000e-05	3.816346e-06	3.855490e-06
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1208923/d01-x01-y03
+Path=/REF/CMS_2013_I1208923/d01-x01-y03
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+1.235000e+02	9.500000e+00	9.500000e+00	2.346000e+03	1.913661e+02	2.022375e+02
+1.430000e+02	1.000000e+01	1.000000e+01	1.033000e+03	7.983107e+01	8.178631e+01
+1.635000e+02	1.050000e+01	1.050000e+01	4.757000e+02	3.439259e+01	3.584690e+01
+1.850000e+02	1.100000e+01	1.100000e+01	2.303000e+02	1.586758e+01	1.616447e+01
+2.080000e+02	1.200000e+01	1.200000e+01	1.169000e+02	7.826238e+00	8.121576e+00
+2.325000e+02	1.250000e+01	1.250000e+01	6.107000e+01	4.018420e+00	4.145962e+00
+2.585000e+02	1.350000e+01	1.350000e+01	3.191000e+01	2.105445e+00	2.144411e+00
+2.860000e+02	1.400000e+01	1.400000e+01	1.656000e+01	1.101635e+00	1.120893e+00
+3.150000e+02	1.500000e+01	1.500000e+01	9.079000e+00	5.887385e-01	5.996332e-01
+3.460000e+02	1.600000e+01	1.600000e+01	4.990000e+00	3.271101e-01	3.320632e-01
+3.785000e+02	1.650000e+01	1.650000e+01	2.748000e+00	1.829891e-01	1.839837e-01
+4.125000e+02	1.750000e+01	1.750000e+01	1.524000e+00	1.036967e-01	1.046900e-01
+4.490000e+02	1.900000e+01	1.900000e+01	8.352000e-01	5.838373e-02	5.897881e-02
+4.875000e+02	1.950000e+01	1.950000e+01	4.588000e-01	3.312099e-02	3.351716e-02
+5.275000e+02	2.050000e+01	2.050000e+01	2.547000e-01	1.894466e-02	1.914419e-02
+5.700000e+02	2.200000e+01	2.200000e+01	1.396000e-01	1.082959e-02	1.082959e-02
+6.150000e+02	2.300000e+01	2.300000e+01	7.495000e-02	6.019975e-03	6.039876e-03
+6.620000e+02	2.400000e+01	2.400000e+01	4.001000e-02	3.344010e-03	3.383726e-03
+7.115000e+02	2.550000e+01	2.550000e+01	2.110000e-02	1.869599e-03	1.869599e-03
+7.635000e+02	2.650000e+01	2.650000e+01	1.064000e-02	9.982485e-04	9.982485e-04
+8.180000e+02	2.800000e+01	2.800000e+01	5.301000e-03	5.260893e-04	5.338333e-04
+8.755000e+02	2.950000e+01	2.950000e+01	2.644000e-03	2.817889e-04	2.855679e-04
+9.360000e+02	3.100000e+01	3.100000e+01	1.278000e-03	1.507912e-04	1.507912e-04
+9.995000e+02	3.250000e+01	3.250000e+01	5.419000e-04	7.314650e-05	7.323059e-05
+1.066500e+03	3.450000e+01	3.450000e+01	2.633000e-04	4.134695e-05	4.172793e-05
+1.136500e+03	3.550000e+01	3.550000e+01	1.416000e-04	2.881406e-05	2.893942e-05
+1.428000e+03	2.560000e+02	2.560000e+02	8.804000e-06	2.530172e-06	2.535084e-06
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1208923/d01-x01-y01
+Path=/REF/CMS_2013_I1208923/d01-x01-y01
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+1.235000e+02	9.500000e+00	9.500000e+00	2.950000e+03	2.207918e+02	2.198045e+02
+1.430000e+02	1.000000e+01	1.000000e+01	1.341000e+03	9.512623e+01	9.317188e+01
+1.635000e+02	1.050000e+01	1.050000e+01	6.401000e+02	4.331801e+01	4.254092e+01
+1.850000e+02	1.100000e+01	1.100000e+01	3.114000e+02	1.989799e+01	1.989799e+01
+2.080000e+02	1.200000e+01	1.200000e+01	1.609000e+02	9.831073e+00	9.929753e+00
+2.325000e+02	1.250000e+01	1.250000e+01	8.540000e+01	5.166237e+00	5.254760e+00
+2.585000e+02	1.350000e+01	1.350000e+01	4.594000e+01	2.736585e+00	2.785390e+00
+2.860000e+02	1.400000e+01	1.400000e+01	2.498000e+01	1.513803e+00	1.513803e+00
+3.150000e+02	1.500000e+01	1.500000e+01	1.393000e+01	8.062258e-01	8.161495e-01
+3.460000e+02	1.600000e+01	1.600000e+01	7.820000e+00	4.603314e-01	4.662757e-01
+3.785000e+02	1.650000e+01	1.650000e+01	4.493000e+00	2.653771e-01	2.643823e-01
+4.125000e+02	1.750000e+01	1.750000e+01	2.625000e+00	1.558236e-01	1.578132e-01
+4.490000e+02	1.900000e+01	1.900000e+01	1.520000e+00	9.166242e-02	9.464143e-02
+4.875000e+02	1.950000e+01	1.950000e+01	8.747000e-01	5.415432e-02	5.465016e-02
+5.275000e+02	2.050000e+01	2.050000e+01	5.164000e-01	3.266757e-02	3.306675e-02
+5.700000e+02	2.200000e+01	2.200000e+01	3.078000e-01	1.985674e-02	2.035534e-02
+6.150000e+02	2.300000e+01	2.300000e+01	1.811000e-01	1.203370e-02	1.223315e-02
+6.620000e+02	2.400000e+01	2.400000e+01	1.074000e-01	7.343705e-03	7.542546e-03
+7.115000e+02	2.550000e+01	2.550000e+01	6.392000e-02	4.538744e-03	4.548681e-03
+7.635000e+02	2.650000e+01	2.650000e+01	3.758000e-02	2.760616e-03	2.810071e-03
+8.180000e+02	2.800000e+01	2.800000e+01	2.215000e-02	1.704846e-03	1.734416e-03
+8.755000e+02	2.950000e+01	2.950000e+01	1.309000e-02	1.053233e-03	1.063015e-03
+9.360000e+02	3.100000e+01	3.100000e+01	7.516000e-03	6.386815e-04	6.464132e-04
+9.995000e+02	3.250000e+01	3.250000e+01	4.209000e-03	3.810577e-04	3.829530e-04
+1.066500e+03	3.450000e+01	3.450000e+01	2.324000e-03	2.249289e-04	2.286154e-04
+1.136500e+03	3.550000e+01	3.550000e+01	1.469000e-03	1.533949e-04	1.551838e-04
+1.210000e+03	3.800000e+01	3.800000e+01	8.029000e-04	9.339491e-05	9.423699e-05
+1.287500e+03	3.950000e+01	3.950000e+01	3.381000e-04	4.659721e-05	4.682104e-05
+1.368500e+03	4.150000e+01	4.150000e+01	1.793000e-04	2.978456e-05	2.978456e-05
+1.453500e+03	4.350000e+01	4.350000e+01	9.499000e-05	1.919927e-05	1.923315e-05
+1.542500e+03	4.550000e+01	4.550000e+01	4.333000e-05	1.074728e-05	1.074244e-05
+1.686000e+03	9.800000e+01	9.800000e+01	1.627000e-05	5.069211e-06	5.065017e-06
+1.950000e+03	1.660000e+02	1.660000e+02	2.053000e-06	1.519949e-06	1.519542e-06
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1208923/d02-x01-y05
+Path=/REF/CMS_2013_I1208923/d02-x01-y05
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+1.123000e+03	1.230000e+02	1.230000e+02	4.980000e+00	6.880356e-01	8.039061e-01
+1.388000e+03	1.420000e+02	1.420000e+02	1.180000e+00	2.008905e-01	2.255349e-01
+1.693000e+03	1.630000e+02	1.630000e+02	3.040000e-01	5.473619e-02	6.044146e-02
+2.043500e+03	1.875000e+02	1.875000e+02	6.270000e-02	1.446245e-02	1.576864e-02
+2.445000e+03	2.140000e+02	2.140000e+02	7.700000e-03	3.587450e-03	3.656952e-03
+2.903000e+03	2.440000e+02	2.440000e+02	2.470000e-03	1.067946e-03	1.119933e-03
+3.425500e+03	2.785000e+02	2.785000e+02	6.280000e-04	2.061189e-04	2.334309e-04
+4.381000e+03	6.770000e+02	6.770000e+02	1.210000e-05	1.345180e-05	1.524101e-05
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1208923/d02-x01-y04
+Path=/REF/CMS_2013_I1208923/d02-x01-y04
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+6.525000e+02	8.750000e+01	8.750000e+01	4.220000e+01	3.241373e+00	3.777526e+00
+8.420000e+02	1.020000e+02	1.020000e+02	8.610000e+00	7.394187e-01	8.338879e-01
+1.062500e+03	1.185000e+02	1.185000e+02	2.030000e+00	1.945585e-01	2.127087e-01
+1.318000e+03	1.370000e+02	1.370000e+02	5.640000e-01	5.863148e-02	6.412901e-02
+1.612500e+03	1.575000e+02	1.575000e+02	1.020000e-01	1.703907e-02	1.771581e-02
+1.951000e+03	1.810000e+02	1.810000e+02	2.810000e-02	2.688289e-03	3.121234e-03
+2.339000e+03	2.070000e+02	2.070000e+02	6.300000e-03	6.533927e-04	7.649065e-04
+2.782500e+03	2.365000e+02	2.365000e+02	1.300000e-03	1.826089e-04	2.097737e-04
+3.288500e+03	2.695000e+02	2.695000e+02	1.350000e-04	3.453143e-05	3.750227e-05
+4.308000e+03	7.500000e+02	7.500000e+02	4.480000e-06	1.478005e-06	1.886054e-06
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1208923/d02-x01-y01
+Path=/REF/CMS_2013_I1208923/d02-x01-y01
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+2.465000e+02	4.950000e+01	4.950000e+01	1.950000e+02	1.193315e+01	1.476787e+01
+3.575000e+02	6.150000e+01	6.150000e+01	2.590000e+01	1.559134e+00	1.825075e+00
+4.920000e+02	7.300000e+01	7.300000e+01	4.810000e+00	2.720074e-01	3.121666e-01
+6.525000e+02	8.750000e+01	8.750000e+01	8.880000e-01	4.329457e-02	5.100990e-02
+8.420000e+02	1.020000e+02	1.020000e+02	2.020000e-01	1.000200e-02	1.167262e-02
+1.062500e+03	1.185000e+02	1.185000e+02	4.970000e-02	2.612968e-03	3.046326e-03
+1.318000e+03	1.370000e+02	1.370000e+02	1.290000e-02	7.102112e-04	8.287340e-04
+1.612500e+03	1.575000e+02	1.575000e+02	3.220000e-03	1.982171e-04	2.321314e-04
+1.951000e+03	1.810000e+02	1.810000e+02	8.800000e-04	6.444610e-05	7.466257e-05
+2.339000e+03	2.070000e+02	2.070000e+02	1.720000e-04	1.728844e-05	1.946998e-05
+2.782500e+03	2.365000e+02	2.365000e+02	4.020000e-05	6.090780e-06	6.633400e-06
+3.217500e+03	1.985000e+02	1.985000e+02	5.410000e-06	2.121404e-06	2.167953e-06
+3.713000e+03	2.970000e+02	2.970000e+02	1.140000e-06	7.498353e-07	7.584946e-07
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1208923/d02-x01-y03
+Path=/REF/CMS_2013_I1208923/d02-x01-y03
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+4.920000e+02	7.300000e+01	7.300000e+01	6.530000e+01	4.017213e+00	4.662746e+00
+6.525000e+02	8.750000e+01	8.750000e+01	1.200000e+01	7.793587e-01	8.819297e-01
+8.420000e+02	1.020000e+02	1.020000e+02	2.780000e+00	1.742642e-01	1.959413e-01
+1.062500e+03	1.185000e+02	1.185000e+02	7.040000e-01	5.773327e-02	6.237980e-02
+1.318000e+03	1.370000e+02	1.370000e+02	1.520000e-01	9.176056e-03	1.059481e-02
+1.612500e+03	1.575000e+02	1.575000e+02	3.690000e-02	2.374974e-03	2.767996e-03
+1.951000e+03	1.810000e+02	1.810000e+02	9.080000e-03	6.860503e-04	7.920404e-04
+2.339000e+03	2.070000e+02	2.070000e+02	1.840000e-03	1.469966e-04	1.751713e-04
+2.846500e+03	3.005000e+02	3.005000e+02	2.490000e-04	2.554858e-05	3.044240e-05
+3.500500e+03	3.535000e+02	3.535000e+02	2.230000e-05	4.004722e-06	4.526301e-06
+4.181500e+03	3.275000e+02	3.275000e+02	1.510000e-06	8.596517e-07	8.850452e-07
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1208923/d02-x01-y02
+Path=/REF/CMS_2013_I1208923/d02-x01-y02
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+3.280000e+02	5.800000e+01	5.800000e+01	1.820000e+02	1.050190e+01	1.264951e+01
+4.560000e+02	7.000000e+01	7.000000e+01	2.980000e+01	1.662348e+00	1.942009e+00
+6.095000e+02	8.350000e+01	8.350000e+01	5.630000e+00	3.067915e-01	3.541539e-01
+7.915000e+02	9.850000e+01	9.850000e+01	1.270000e+00	6.296825e-02	7.382412e-02
+1.004000e+03	1.140000e+02	1.140000e+02	2.980000e-01	1.519079e-02	1.776288e-02
+1.250500e+03	1.325000e+02	1.325000e+02	7.520000e-02	4.157078e-03	4.848505e-03
+1.535000e+03	1.520000e+02	1.520000e+02	1.830000e-02	1.077868e-03	1.266689e-03
+1.862000e+03	1.750000e+02	1.750000e+02	4.230000e-03	2.839859e-04	3.360432e-04
+2.237500e+03	2.005000e+02	2.005000e+02	9.630000e-04	7.739180e-05	9.110022e-05
+2.666500e+03	2.285000e+02	2.285000e+02	1.770000e-04	1.899921e-05	2.201182e-05
+3.155500e+03	2.605000e+02	2.605000e+02	2.200000e-05	4.271627e-06	4.644491e-06
+3.713000e+03	2.970000e+02	2.970000e+02	3.570000e-06	1.371300e-06	1.432428e-06
+# END YODA_SCATTER2D
+
