@@ -5,6 +5,7 @@
 	* Add ALICE strange baryon analysis (ALICE_2014_I1300380)
 	* Add CDF ZpT measurement in Z->ee events analysis (CDF_2012_I1124333)
 	* Add validated ATLAS W+charm measurement (ATLAS_2014_I1282447)
+	* Add validated CMS jet and dijet analysis (CMS_2013_I1208923)
 
 2015-07-01  Andy Buckley  <andy.buckley@cern.ch>
 
